# Flamapp---Real-Time-Edge-Detection-Viewer

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/flamapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/flamapp/: FlamappApplication.kt  FullScreenQuad.kt  GLRenderer.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/flamapp/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
web/: package-lock.json  package.json  tsconfig.json
web/src/: index.d.ts  index.d.ts.map  index.html  index.js  index.js.map  index.ts
